weight scale issues resolved

--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -32,9 +32,11 @@
             </div>
         </div>
         <div class="balanced-view dim">
-          <div class="dim-weight dim-weight-icon"></div>
-          <div class="weight-icon"></div>
-          <div class="balance"></div>
+          <div class="tipper">
+            <div class="dim-weight dim-weight-icon"></div>
+            <div class="weight-icon"></div>
+            <div class="balance"></div>
+          </div>
           <div class="triangle"></div>
         </div>
         <div class="inputs">
