--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -30,16 +30,13 @@
   transform: scale(0.99);
 }
 
-.range {
-  width: 100%;
-}
 
 .range__slider {
   -webkit-appearance: none;
   width: 100%;//calc(100% - (#{$range-label-width + 13px}));
   height: 10px;
   border-radius: 10px;
-  background: var(--color-theme-highlight-block);
+  background: var(--color-bg);
   outline: none;
   padding: 0;
   margin: 0;
@@ -50,12 +47,12 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: var(--color-theme-highlight-block);
+    background: var(--color-bg);
     cursor: pointer;
     transition: background .15s ease-in-out;
 
     &:hover {
-      background: var(--color-text);
+      background: var(--color-primary-glare);
     }
   }
 
@@ -73,12 +70,12 @@
     transition: background .15s ease-in-out;
 
     &:hover {
-      background: var(--color-text);
+      background: var(--color-primary-glare);
     }
   }
 
   &:active::-moz-range-thumb {
-    background: var(--color-text);
+    background: var(--color-primary-glare);
   }
   
   // Focus state
