--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -11,7 +11,7 @@
     		</div>
     	</div>
     		<div class="inputs">
-          <h3>Step 1: Enter dimensions</h3>
+          <h3 class="pad-bottom-700">Step 1: Enter dimensions</h3>
     			<!-- <div class="unitswitch">
     				<input type="checkbox" name="unitswitch" class="unitswitch-checkbox" id="myunitswitch" checked>
     				<label class="unitswitch-label" for="myunitswitch">
@@ -41,7 +41,7 @@
           <div class="balance-base"></div>
         </div>
         <div class="inputs">
-          <h3>Step 2: Enter Weight</h3>
+          <h3 class="pad-bottom-700">Step 2: Enter Weight</h3>
           <label class=" inputs__dim" for="weight">Weight</label>
           <div class="input_background inputs__dim">
             <input id="weight" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="^[+]?([.]\d+|\d+[.]?\d*)$">
@@ -56,9 +56,9 @@
           <p class="calcs__inputs">Billing Weight</p><p class="calcs__result calcs__billing"></p>
         </div>
         <div class="range">
-          <h3 class="factors">Step 3: Select a Dimensional Weight Factor </h3>
+          <h3  class="pad-bottom-700 factors">Step 3: Select a Dimensional Weight Factor </h3>
           <input class="dim_input range__slider" type="range" name="factors" id="factors" min="3000" max="9000" step="1000">
-          <div class="factorTable">
+          <!-- <div class="factorTable visually-hidden">
             <div class="factor__3000 selected">3000</div>
             <div class="factor__4000">4000</div>
             <div class="factor__5000">5000</div>
@@ -66,7 +66,7 @@
             <div class="factor__7000">7000</div>
             <div class="factor__8000">8000</div>
             <div class="factor__9000">9000</div>
-          </div>
+          </div> -->
           <div class="factorFacts">
             <section class="factor__headings"><h4>cm3/kg</h4><h4>kg/m3</h4><h4>in3/lb</h4><h4>lb/ft3</h4></section>
             <section class="factor__3000 selected"><p>3000</p><p>333</p><p>83</p><p>20.8</p></section>
