--- a/src/scss/pages/dim_weight.scss
+++ b/src/scss/pages/dim_weight.scss
@@ -54,11 +54,11 @@
   margin: 2em auto 4em auto;
   font-size: 1rem;
   align-items: center;
-  padding: 1em;
+  padding: 1.2em;
   border-radius: 1em;
   input[type] {
     text-align: right;
-    width: 124%;
+    width: 130%;
     padding-right: 0.4em;
   }
   label {
@@ -274,7 +274,8 @@ h3 {
 .calcs {
     display: grid;
 		grid-template-columns: 1fr 1fr;
-		column-gap: .3em;
+    column-gap: .3em;
+    grid-template-rows: 4em repeat(3,1.5em 2.5em);
 		&__heading {
 			grid-column: 1/3;
 			text-align: center;
