--- a/src/_includes/partials/components/dim-weight.njk
+++ b/src/_includes/partials/components/dim-weight.njk
@@ -11,26 +11,25 @@
     		</div>
     	</div>
     		<div class="inputs">
-          <h3 class="pad-bottom-700">Step 1: Enter dimensions</h3>
-    			<!-- <div class="unitswitch">
-    				<input type="checkbox" name="unitswitch" class="unitswitch-checkbox" id="myunitswitch" checked>
-    				<label class="unitswitch-label" for="myunitswitch">
-    					<span class="unitswitch-inner"></span>
-    					<span class="unitswitch-switch"></span>
-    				</label>
-    			</div> -->
-    				<label class="inputs__dim"  for="length">Length</label>
+          <h3 class="pad-bottom-300">Step 1: Enter dimensions</h3>
+            <div class="inputs__units pad-bottom-300">
+                <input class="inputs__units-itm dim_input" type="radio" id="metric" name="unitClass" value="metric" checked>
+                <label class="inputs__units-itm" for="metric">Metric</label>
+                <input class="inputs__units-itm dim_input" type="radio" id="imperial" name="unitClass" value="imperial">
+                <label class="inputs__units-itm" for="imperial">Imperial</label>
+            </div>
+            <label class="inputs__dim" for="width">Length</label>
     				<div class="input_background inputs__dim">
               <input id="length" class="dim_input validity_margin" title="positive numbers only" type="text" value="100" pattern="^[+]?([.]\d+|\d+[.]?\d*)$">
-            </div>
+            </div><span class="UOM__length"></span>
     				<label class="inputs__dim" for="width">Width</label>
     				<div class="input_background inputs__dim">
               <input id="width" class="dim_input validity_margin" title="positive numbers only" type="text" value="250" pattern="^[+]?([.]\d+|\d+[.]?\d*)$">
-            </div>
+            </div><span class="UOM__length"></span>
     				<label class="inputs__dim" for="height">Height</label>
     				<div class="input_background inputs__dim">
               <input id="height" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="^[+]?([.]\d+|\d+[.]?\d*)$">
-            </div>
+            </div><span class="UOM__length"></span>
         </div>
         <div class="balanced-view dim">
           <div class="tipper">
@@ -45,7 +44,7 @@
           <label class=" inputs__dim" for="weight">Weight</label>
           <div class="input_background inputs__dim">
             <input id="weight" class="dim_input validity_margin" title="positive numbers only" type="text" value="400" pattern="^[+]?([.]\d+|\d+[.]?\d*)$">
-          </div>
+          </div><span class="UOM__weight"></span>
         </div>
         <div class="calcs">
           <h2 class="calcs__heading">Calculations</h2> 
@@ -53,20 +52,13 @@
           <p class="calcs__inputs calcs__volume"></p><p class="calcs__result calcs__v-res"></p>
           <p class="calcs__inputs">Volume / Dim Factor </p><p class="calcs__result">Dimentional weight</p>
           <p class="calcs__inputs calcs__dim-weight"></p><p class="calcs__result calcs__dim-res"></p>
-          <p class="calcs__inputs">Billing Weight</p><p class="calcs__result calcs__billing"></p>
+          <p class="calcs__inputs">Billing Weight</p><p>
+            <span class="calcs__result calcs__billing"></span><span class="UOM__weight"></span>
+          </p>
         </div>
         <div class="range">
           <h3  class="pad-bottom-700 factors">Step 3: Select a Dimensional Weight Factor </h3>
           <input class="dim_input range__slider" type="range" name="factors" id="factors" min="3000" max="9000" step="1000">
-          <!-- <div class="factorTable visually-hidden">
-            <div class="factor__3000 selected">3000</div>
-            <div class="factor__4000">4000</div>
-            <div class="factor__5000">5000</div>
-            <div class="factor__6000">6000</div>
-            <div class="factor__7000">7000</div>
-            <div class="factor__8000">8000</div>
-            <div class="factor__9000">9000</div>
-          </div> -->
           <div class="factorFacts">
             <section class="factor__headings"><h4>cm3/kg</h4><h4>kg/m3</h4><h4>in3/lb</h4><h4>lb/ft3</h4></section>
             <section class="factor__3000 selected"><p>3000</p><p>333</p><p>83</p><p>20.8</p></section>
