minor changes to balance view

--- a/src/_includes/layouts/dim-weight.njk
+++ b/src/_includes/layouts/dim-weight.njk
@@ -5,6 +5,7 @@
 {% set introHeading = title %}
 {% set component_css = "../../css/dim_weight.css" %}
 {% set component_js = "/js/components/dim-weight.js" %}
+{% set introSummary = content %}
 
 {% block content %}
   <main id="main-content" tabindex="-1" class="[ post ] [ h-entry ]">
