twitter card updates

--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -26,6 +26,7 @@
 {% if metaDesc %}
   <meta name="description" content="{{ metaDesc }}" />
   <meta name="twitter:description" content="{{ metaDesc }}" />
+  <meta name="twitter:card" content="summary_large_image">
   <meta property="og:description" content="{{ metaDesc }}" />
 {% endif %}
 
