--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -20,8 +20,10 @@
 <meta property="og:url" content="{{ currentUrl }}" />
 
 {% if site.authorHandle %}
+  <meta name="twitter:site" content="@{{ site.authorHandle | replace('@', '') }}" />
   <meta name="twitter:creator" content="@{{ site.authorHandle | replace('@', '') }}" />
 {% endif %}
+<meta name="twitter:title" content="{{ pageTitle }}">
 <meta name="twitter:card" content="summary_large_image">
 {% if metaDesc %}
   <meta name="description" content="{{ metaDesc }}" />
