--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -35,8 +35,8 @@
 {% if socialImage %}  
   <meta property="og:image" content="{{ socialImage }}" />
   <meta name="twitter:image" content="{{ socialImage }}" />
-  <meta property="og:image:alt" content="Page image for {{ site.name }}" />
-  <meta name="twitter:image:alt" content="Page image for {{ site.name }}" />
+  <meta property="og:image:alt" content="Page image for {{ pageTitle }}" />
+  <meta name="twitter:image:alt" content="Page image for {{ pageTitle }}" />
 {% endif %}
 
 {% if site.paymentPointer %}
