widescreen mode, new images

--- a/src/_includes/layouts/dim-weight.njk
+++ b/src/_includes/layouts/dim-weight.njk
@@ -10,7 +10,7 @@
 {% block content %}
   <main id="main-content" tabindex="-1" class="[ post ] [ h-entry ]">
       {% include "partials/components/intro.njk" %}
-      <div class="post__body inner-wrapper">
+      <div class="post__body">
         {% include "partials/components/dim-weight.njk" %}
       </div>
   </main>
