fixing issue with chromium grid

--- a/src/scss/pages/dim_weight.scss
+++ b/src/scss/pages/dim_weight.scss
@@ -252,6 +252,7 @@ span[class*='UOM'] {
     grid-row: 2/3;
     width: 500px;
     justify-self: center;
+    align-self: center;
 	}
 
   [class*='weight-icon'] {
